# HealthHack-MSCS

./: DELIVERY_SUMMARY.md  README.md  fix_issues.sh  install_direct.sh  install_simple.sh
.github/workflows/: epi-risk-lite.yml
epi-risk-lite/: .gitignore  ARCHITECTURE.md  DATA_EXPANSION_SUMMARY.md  Dockerfile  PROJECT_SUMMARY.md  README.md  USAGE.md  data_expansion_plan.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.sh  test_basic.py  test_installation.py
epi-risk-lite/app/: __init__.py  config.py  main.py  schemas.py
epi-risk-lite/app/engine/: __init__.py  features.py  mapper.py  model_io.py  pathways.py  rules.py  scorer.py
epi-risk-lite/app/engine/data/: allele_proxies.json  alternatives.json  comprehensive_knowledge_base.json  drug_gene_map.json  guidelines.json  star_allele_proxies.json
epi-risk-lite/app/parsers/: __init__.py  csv_parser.py  normalize.py  pdf_parser.py
epi-risk-lite/app/tests/: __init__.py  test_api.py  test_parsers_csv.py  test_parsers_pdf.py  test_rules.py
epi-risk-lite/app/train/: __init__.py  cli.py  pipeline.py
epi-risk-lite/data/: sample_genotype.csv  sample_star_alleles.csv
epi-risk-lite/scripts/: FINAL_TEST_SUMMARY.md  README.md  collect_cpic_data.py  collect_fda_data.py  collect_pharmgkb_data.py  end_to_end_test.py  example_usage.py  final_coverage_analysis.py  integrate_data.py  requirements.txt  test_alternative_validation.py  test_api_with_expanded_data.py  test_expanded_data.py  test_new_drugs.py  validation_test_cases.md
scripts/: docker_epi_risk.sh  run_data_expansion.sh  run_epi_risk.sh  test_epi_risk.sh
